# lllm-jailbreak

./: CLAUDE.md  README.md  conversers.py  main.py  pyproject.toml  update.sh
scripts/: update.sh
src/: README.md  jailbreak.py  main.py
src/Deepinception/: README.md  conversers.py  main.py
src/Deepinception/res/: data_test.json
src/JailbreakingLLMs/: common.py  config.py  conversers.py  conversers_langchain.py  judges.py  language_models.py  loggers.py  main.py  pair_langchain.py  system_prompts.py
src/JailbreakingLLMs/tests/: test_attack_model.py  test_classifier.py  test_litellm.py  test_target_model.py
